# NIYATI

./: .gitignore  ATMOSPHERIC_SCATTERING_GUIDE.md  CMakeLists.txt  RAM.scene  README.md  TONote.txt  VOLUMETRIC_EFFECTS_GUIDE.md  active_project.h  build.bat  build.sh  export_cloud.cpp  gen_compile_commands.py  imgui.ini  inputhandler.c  krushna_clouds.scene  log.txt  ocean.scene  platform_common.cpp  scene.scene  sdf.scene  vcloud_log.txt  wheel.scene
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NIYATI.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  window_win32.vcxproj  window_win32.vcxproj.filters  window_win32_imgui.vcxproj  window_win32_imgui.vcxproj.filters
build-win/window_win32.dir/Debug/: window_win32.exe.recipe  window_win32.ilk  window_win32.vcxproj.FileListAbsolute.txt
build-win/window_win32_imgui.dir/Debug/: window_win32_imgui.exe.recipe  window_win32_imgui.ilk  window_win32_imgui.vcxproj.FileListAbsolute.txt
engine/: engine.h  platform.h  transform.cpp  transform.h
engine/core/: logger.cpp  logger.h
engine/core/gl/: FRAMEBUFFER_QUICKREF.txt  FRAMEBUFFER_USAGE.md  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  modelloading.cpp  shaders.cpp  structs.h  texture.cpp
engine/dependancies/: vmath.h
engine/dependancies/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_widgets.cpp
engine/editor/: attributemanager_layout.cpp  catmulattributes_layout.cpp  clouds_attribute_layout.cpp  editor_layout.cpp  gui.h  imgui_setup.cpp  model_controller.cpp  model_controller.h  ocean_attribute_layout.cpp  renderorder_layout.cpp  scenemanager_layout.cpp  sdf_attribute_layout.cpp  sky_atmosphere_layout.cpp  skybox_attribute_layout.cpp  terrain_attribute_layout.cpp  utilbar_layout.cpp
engine/effects/: cloud.cpp  effects_config.h  effects_manager.cpp  effects_manager.h  particleEmission.cpp  sdf.cpp  sdf.h  sdf_renderer.cpp
engine/effects/atmospheric_Scattering/: TransmittanceLUTShader.glsl  sky_atmosphere_node.cpp  skymodel.cpp
engine/effects/clouds/: cloud_compute.comp.glsl  cloud_quad.frag.glsl  cloud_quad.vert.glsl  noise_gen.comp.glsl  nvdf_generate.comp.glsl  nvdf_generator.cpp  nvdf_preview.comp.glsl  volumetricCloudOnCompute.cpp  volumetricExportVersion.cpp  weather_gen.comp.glsl
engine/effects/instance/: instance.cpp  instance.h
engine/effects/noise/: noise.c  perlin.c  perlin.h
engine/effects/ocean/: ocean.cpp  ocean.h
engine/effects/perlin/: perlin.c
engine/effects/shadow/: shadow_map.cpp
engine/effects/terrain/: main_tcs.glsl  main_tes.glsl  sfs.glsl  terrain.cpp  terrain.h  terrain_overlay.cpp  terrain_overlay.h
engine/effects/vclouds/: nvdf_compressor.cpp  nvdf_compressor.h  nvdf_editor_v2.cpp  nvdf_editor_v2.h  nvdf_v2_generate.comp.glsl  test_noise.cpp  vcloud_noise.cpp  vcloud_noise.h  vcloud_texture.cpp  vcloud_texture.h
engine/shaders/: frag_test.glsl  glow_wheel.frag  glow_wheel.vert  icon.frag  icon.vert  instance.vert  lineFrag.glsl  lineVert.glsl  main_fs[lambart].glsl  particle.frag  particle.vert  particle3D.frag  particle3D.vert  sdf_scene.frag  sdf_scene.vert  shadow_depth.vert  shadow_instance_depth.vert  vert_test.glsl  vertex_shader.glsl
engine/shaders/PBR/: pbrFrag.glsl  prefilter.frag
engine/utils/: BVH.cpp  BVH.h  attrdesc.cpp  attrdesc.h  boundingbox.cpp  boundingbox.h  catmulromspline.cpp  catmulromspline.h  culling.cpp  culling.h  dynamic_cubemap.cpp  dynamic_cubemap.h  editor_utils.h  entity_defs.cpp  ocean_node.cpp  pbr.cpp  primitives.cpp  primitives.h  scene_preloader.cpp  scene_preloader.h  scenegraph.cpp  scenegraph.h  scenegraph_readwrite.cpp  sdf_3d_texture_generator.py  shadermanager.cpp  shadermanager.h  skybox.cpp  skybox_node.cpp  terrain_node.cpp
engine/utils/camera_utils/: camera_base.h  camera_manager.cpp  custom_camera.cpp  mouseboard.cpp  strategic_camera.cpp  wasdqexc.cpp
examples/02_pyramid/: build.sh  project.cpp
examples/03_terrain_pbr/: build.sh  gui.cpp  project.cpp
examples/04_clouds/: build.sh  f22blend.glb  project.cpp
examples/06-Demo/: build.sh  project.cpp
examples/TestSceneCreation/: krushnaScene1.cpp  project.cpp  ramScene.cpp  ramScene.h  tempScene.cpp  tempScene.h  varah3scene.cpp  varah3scene.h
examples/wheel/: project.cpp
linux/: Game  Log.txt  OGL.cpp  a.out  applyfix.sh  build.sh  buildglfw.sh  common.h  ecs.c  glfwmain.cpp  imgui.ini  lincommons.h  log.txt  main_tcs.glsl  main_tes.glsl  minimap_diag.cpp  ogl.h  ogl.rc  platform_common.cpp  todo.list  tx  wincommon.h  window  window.cpp  winmain.cpp
linux/backup_20251115_123246/: common.h
linux/core/gl/: a.out  camera.cpp  camera.h  common.h  log.txt  modelloading.cpp  renderer.cpp  shaders.cpp  structs.h  texture.cpp  window.cpp
linux/core/shaders/: main_fs[lambart].glsl  main_vs.glsl
linux/engine/: culling.cpp  engine.h  platform.h  shadermaker.cpp  transform.cpp  transform.h
linux/engine/perlin/: perlin.c  perlin.h
linux/examples/01_triangle/: build.sh  project.cpp
linux/examples/03_terrain_pbr/: gui.cpp  project.cpp
linux/user/: grassblade.cpp  mipmap.cpp  sfs.glsl  sharedtypes.h  svs.glsl  terrain.cpp  userrendercalls.cpp  userrenderimports.h
linux/user/grass/: grassblade.cpp
linux/user/models/: DamagedHelmet.fbx  grassblade.fbx  model.fbx  propulsion.fbx  ship.fbx
linux/user/ship/: ship.cpp  (+1 more)
templates/project_template/: build.sh  project.cpp
tobedeleted/: shadow.cpp
user/: pbr.cpp  sky_profiles.ini  skybox.cpp  userrendercalls.cpp  userrenderimports.h
user/terrain/: terrain.h
(+65 files in other folders)
